--- a/gpt_helper_configuration.yaml
+++ b/gpt_helper_configuration.yaml
@@ -15,5 +15,12 @@ ignored_files:
 
 files:
   - main.py
-  - handlers/*
-  - models/*
+  - handlers/start.py
+  - handlers/next_question.py
+  - handlers\handle_response.py
+  # - requirements.txt
+
+# before_message: "Act so you professional software engineer, I will provide my project that splited into parts, you main goal help me impove my project, following best practices (KISS, DRY, YAGNI, SOLID, etc.)"
+before_message: "This is updated code, please review it and give me feedback"
+after_part_message: ""
+after_message: ""
