--- a/gpt_helper_configuration.yaml
+++ b/gpt_helper_configuration.yaml
@@ -21,6 +21,7 @@ files:
   # - requirements.txt
 
 # before_message: "Act so you professional software engineer, I will provide my project that splited into parts, you main goal help me impove my project, following best practices (KISS, DRY, YAGNI, SOLID, etc.)"
-before_message: "This is updated code, please review it and give me feedback"
+# before_message: "This is updated code, please review it and give me feedback"
+before_message: ""
 after_part_message: ""
 after_message: ""
